# haskell-go-brick

./: README.md  haskell-go-brick.cabal
src/: Control.hs  Main.hs  Model.hs  View.hs
src/Model/: Board.hs  Player.hs  Score.hs
tests/: Test.hs
