name:                haskell-go-brick
version:             0.0.0.1
license:             MIT
license-file:        LICENSE
author:              William Duan, Kyle Hu, Frederik Jomaas, Colin Lemarchand
maintainer:          clemarch@ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Library
  exposed-modules:   View, 
                     Control,
                     Model,
                     Model.Board,
                     Model.Score,
                     Model.Player
  hs-source-dirs:    src
  build-depends:     base >=4.9, 
                     random >=1.1 && <1.2,
                     containers,
                     vty, 
                     brick,
                     QuickCheck
  default-language:  Haskell2010

executable haskell-go-brick
  main-is:           src/Main.hs
  build-depends:     base >=4.9, 
                     random >=1.1 && <1.2,
                     containers,
                     vty, 
                     brick,
                     QuickCheck,
                     haskell-go-brick
  default-language:  Haskell2010
  ghc-options:       -W -threaded

test-suite tests
  default-language:  Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Test.hs
  build-depends:     base >=4.9,
                     process,
                     containers,
                     mtl,
                     filepath,
                     QuickCheck,
                     tasty,
                     tasty-hunit,
                     tasty-quickcheck,
                     haskell-go-brick
  other-modules:     Common
